Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25548

Many QML3D test cases are skipped

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.7.0
    • Qt3D TP2
    • Qt3D
    • None
    • 32823026cbbffe059c540711dda51488c8049238

      Here is a partial stdout/stderr of the test run:

      sarasmit@bq-imacdev1:~/build/qt5/qt3d$ make -C tests/auto/qml3d check
      ...
      ...
      SKIP   : qml3d::Sphere::test_radiusChanged() Crashing
         Loc: [/Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/sphere/tst_sphere.qml(97)]
      INFO   : qml3d::Sphere::cleanupTestCase() entering
      PASS   : qml3d::Sphere::cleanupTestCase()
      INFO   : qml3d::Viewport::initTestCase() entering
      PASS   : qml3d::Viewport::initTestCase()
      INFO   : qml3d::Viewport::test_camera() entering
      SKIP   : qml3d::Viewport::test_camera() 'Cannot convert object to primitive value' error, needs porting
         Loc: [/Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/viewport/tst_viewport.qml(85)]
      INFO   : qml3d::Viewport::test_light() entering
      SKIP   : qml3d::Viewport::test_light() 'Cannot convert object to primitive value' error, needs porting
         Loc: [/Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/viewport/tst_viewport.qml(108)]
      INFO   : qml3d::Viewport::test_lightModel() entering
      PASS   : qml3d::Viewport::test_lightModel()
      INFO   : qml3d::Viewport::test_modes() entering
      QWARN  : qml3d::Viewport::test_modes() QObject::connect: Cannot connect (null)::beforeRendering() to Viewport::objectForPoint()
      PASS   : qml3d::Viewport::test_modes()
      INFO   : qml3d::Viewport::cleanupTestCase() entering
      PASS   : qml3d::Viewport::cleanupTestCase()
      Totals: 60 passed, 0 failed, 16 skipped
      ********* Finished testing of qml3d *********
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sarasmit Sarah Smith (closed Nokia identity) (Inactive)
            sarasmit Sarah Smith (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes