Fix skipped tests.

Also fix some other spam and warnings out of this test.

Task-number: QTBUG-25548
Change-Id: Id7a1cf12837bed79310539b324b1a06cd77c4613
Reviewed-by: Danny Pope <daniel.pope@nokia.com>