src/quick3d/qquickitem3d.h
@@ -71,11 +71,11 @@ class Q_QT3D_QUICK_EXPORT QQuickItem3D : public QQuickItem
     Q_ENUMS(SortMode)
     Q_ENUMS(CullFace)
     Q_FLAGS(CullFaces)
-    Q_PROPERTY(QVector3D position READ position WRITE setPosition NOTIFY positionChanged)
-    Q_PROPERTY(qreal x READ x WRITE setX NOTIFY positionChanged)
-    Q_PROPERTY(qreal y READ y WRITE setY NOTIFY positionChanged)
-    Q_PROPERTY(qreal z READ z WRITE setZ NOTIFY positionChanged)
-    Q_PROPERTY(qreal scale READ scale WRITE setScale NOTIFY scaleChanged)
+    Q_PROPERTY(QVector3D position READ position WRITE setPosition NOTIFY position3dChanged)
+    Q_PROPERTY(qreal x READ x WRITE setX NOTIFY position3dChanged)
+    Q_PROPERTY(qreal y READ y WRITE setY NOTIFY position3dChanged)
+    Q_PROPERTY(qreal z READ z WRITE setZ NOTIFY position3dChanged)
+    Q_PROPERTY(qreal scale READ scale WRITE setScale NOTIFY scale3dChanged)
     Q_PROPERTY(QQmlListProperty<QQuickQGraphicsTransform3D> transform READ transform DESIGNABLE false FINAL)
     Q_PROPERTY(QQmlListProperty<QQuickQGraphicsTransform3D> pretransform READ pretransform DESIGNABLE false FINAL)
     Q_PROPERTY(QQuickMesh *mesh READ mesh WRITE setMesh NOTIFY meshChanged)
@@ -193,9 +193,8 @@ private Q_SLOTS:
     void handleOpenglContextIsAboutToBeDestroyed();
 
 Q_SIGNALS:
-    void positionChanged();
-    void scaleChanged();
-    void rotationChanged();
+    void position3dChanged();
+    void scale3dChanged();
     void meshChanged();
     void meshNodeChanged();
     void effectChanged();
