tests/auto/qml3d/scale3d/tst_scale3d.qml
@@ -72,7 +72,6 @@ Viewport {
         name: "Scale3D"
 
         function test_uniformScale() {
-            skip("Scale3D.scale confuses tests");
             compare(scale1.scale, Qt.vector3d(2.5, 2.5, 2.5), "uniform1")
             scale1.scale = 4.5
             compare(scale1.scale, Qt.vector3d(4.5, 4.5, 4.5), "uniform2")
@@ -81,7 +80,6 @@ Viewport {
         }
 
         function test_nonUniformScale() {
-            skip("Scale3D.scale confuses tests");
             compare(scale2.scale, Qt.vector3d(1.0, 0.5, -2.0), "nonuniform1")
             scale2.scale = Qt.vector3d(3.0, -2.5, 1.5)
             compare(scale2.scale, Qt.vector3d(3.0, -2.5, 1.5), "nonuniform2")
@@ -90,7 +88,6 @@ Viewport {
         }
 
         function test_scaleChanged() {
-            skip("Scale3D.scale confuses tests");
             compare(scale3.scale, Qt.vector3d(1.0, 1.0, 1.0), "changed1")
             compare(scale3.changed, 0, "changed2")
             scale3.scale = Qt.vector3d(3.0, -2.5, 1.5)
@@ -102,7 +99,6 @@ Viewport {
         }
 
         function test_originChanged() {
-            skip("Scale3D.scale confuses tests");
             compare(scale4.origin, Qt.vector3d(0.0, 0.0, 0.0), "changed1")
             compare(scale4.changed, 0, "changed2")
             scale4.origin = Qt.vector3d(3.0, -2.5, 1.5)
