tests/auto/qml3d/viewport/tst_viewport.qml
@@ -82,7 +82,6 @@ Viewport {
         }
 
         function test_camera() {
-            skip("'Cannot convert object to primitive value' error, needs porting");
             verify(viewport.camera != null, "camera")
             verify(viewport.camera != newCamera, "camera-obj")
             compare(viewport.camera.projectionType, 0, "projectionType")
@@ -105,7 +104,6 @@ Viewport {
         }
 
         function test_light() {
-            skip("'Cannot convert object to primitive value' error, needs porting");
             verify(viewport.light != null, "light")
             verify(viewport.light != newLight, "light-obj")
             compare(viewport.light.type, 0, "type-directional")
